--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 
  <div class="cInnerContent">
   <h1 class="header-section gs_reveal ipsType_center">
-    <svg class="logo-animation" width="100" height="100" viewBox="0 0 100 100">
+    <svg class="logo-animation" width="100" height="100" viewBox="0 0 1 100">
       <line class="line1" x1="30" y1="20" x2="30" y2="80" />
       <line class="line2" x1="30" y1="80" x2="70" y2="80" />
       <circle class="circle" cx="30" cy="10" r="10" />
@@ -20,15 +20,15 @@
       </div>
 
       <div class="ipsGrid_span7 ipsType_left">
-        <h2 class="heading_large gs_reveal">Amazing <strong style="color: rgb(8, 8, 223);"> ANIMATION</strong> Websites</h2>
-        <p class="gs_reveal"><a href="#"></a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, eligendi. Tempore ad error, natus in incidunt nemo illo voluptatibus, voluptates cum, nihil ullam doloribus expedita explicabo enim eum mollitia laboriosam.</p>
+        <h2 class="heading_large gs_reveal"><strong style="color: rgb(8, 8, 223);"> ANIMATED</strong> Websites</h2>
+        <!-- <p class="gs_reveal"><a href="#"></a> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo, eligendi. Tempore ad error, natus in incidunt nemo illo voluptatibus, voluptates cum, nihil ullam doloribus expedita explicabo enim eum mollitia laboriosam.</p> -->
       </div>
     </div>
 
     <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="ipsGrid_span7 ipsType_right">
-        <h2 class="heading_large gs_reveal">Creates super <strong style="color:rgb(8, 8, 223);">GRAPHS</strong></h2>
-        <p class="gs_reveal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, repudiandae voluptas ab, animi velit sequi impedit numquam facere eius perferendis eveniet quia nemo distinctio quaerat delectus eum?</p>
+        <h2 class="heading_large gs_reveal">Interactive <strong style="color:rgb(8, 8, 223);">GRAPHS</strong></h2>
+        <!-- <p class="gs_reveal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem, repudiandae voluptas ab, animi velit sequi impedit numquam facere eius perferendis eveniet quia nemo distinctio quaerat delectus eum?</p> -->
       </div>
 
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromRight">
@@ -42,18 +42,18 @@
 
     <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromLeft">
-        <div class="card" style="background-color: rgb(228, 78, 48);">
+        <div class="card" style="background-color: rgb(141, 39, 169);">
           <!-- <img width="479" src="https://picsum.photos/479/479?index=3" alt=""> -->
         </div>
       </div>
 
       <div class="ipsGrid_span7 ipsType_left">
-        <h2 class="heading_large gs_reveal">Data <strong style="color:rgb(8, 8, 223);">Visualization</strong></h2>
-        <p class="gs_reveal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam explicabo molestias praesentium fuga omnis quas! Soluta fugit quis repudiandae, aspernatur vel, quas cumque quisquam voluptas laudantium odit libero numquam molestias.</p>
+        <h2 class="heading_large gs_reveal">Data <strong style="color:rgb(8, 8, 223);">StoryTelling</strong></h2>
+        <!-- <p class="gs_reveal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam explicabo molestias praesentium fuga omnis quas! Soluta fugit quis repudiandae, aspernatur vel, quas cumque quisquam voluptas laudantium odit libero numquam molestias.</p> -->
       </div>
     </div>
 
-    <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
+    <!-- <div class="feature ipsSpacer_bottom_double ipsGrid ipsGrid_collapsePhone">
       <div class="ipsGrid_span7 ipsType_right">
         <h2 class="heading_large gs_reveal">Data <strong style="color:rgb(8, 8, 223);">StoryTelling</strong></h2>
         <p class="gs_reveal">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam nesciunt ab, deleniti iste suscipit nihil soluta in accusantium at culpa repudiandae quia tenetur aspernatur doloremque molestias eius commodi magni!</p>
@@ -61,10 +61,10 @@
 
       <div class="featured-image-container ipsGrid_span5 gs_reveal gs_reveal_fromRight">
         <div class="card" style="background-color: rgb(141, 39, 169);">
-          <!-- <img width="479" src="https://picsum.photos/479/479?index=4" alt=""> -->
+          <img width="479" src="https://picsum.photos/479/479?index=4" alt="">
         </div>
       </div>
-    </div>
+    </div> -->
 
   </div>
 
