--- a/src/app/components/stories/stories.component.html
+++ b/src/app/components/stories/stories.component.html
@@ -3,7 +3,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5"  style="padding-top: 10%;">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light" style="color: rgb(8, 8, 223); font-size: 52px;">Stories</h1>
+        <h1 class="fw-light" style="color: rgb(8, 8, 223); font-size: 52px; font-family: Gopher;">Stories</h1>
       </div>
     </div>
   </section>
